--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4"
 serde_json = "1.0"
 rtdlib = "1.5"
 uname = "0.1.1"
 sled = "0.29.2"
+cron = "0.6.0"
+job_scheduler = "1.1.0"
