--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 
 [dependencies]
 chrono = "0.4"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rtdlib = "1.5"
 uname = "0.1.1"
-sled = "0.29.2"
 cron = "0.6.0"
 job_scheduler = "1.1.0"
