--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 chrono = "0.4"
+chrono-tz = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rtdlib = "1.5"
