--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.7.2"
 chrono = "0.4"
 chrono-tz = "0.5"
 serde = { version = "1.0", features = ["derive"] }
