--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Riko Sakurauchi <lijiahao99131@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 rand = "0.7.2"
 chrono = "0.4"
@@ -15,3 +13,7 @@ serde_json = "1.0"
 rtdlib = "1.5"
 uname = "0.1.1"
 cron = "0.6.0"
+
+[profile.release]
+lto = true
+codegen-units = 1
