--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,5 +5,6 @@ RUN wget -O /usr/lib/libtdjson.so.1.5.0 https://github.com/rikakomoe/hyper_bed_c
 RUN mkdir -p /hyper_bed_caller/target/release \
     && wget -O /hyper_bed_caller/target/release/hyper_bed_caller https://github.com/rikakomoe/hyper_bed_caller/releases/download/v0.1.0-pre-beta/hyper_bed_caller \
     && chmod +x /hyper_bed_caller/target/release/hyper_bed_caller
+ENV DATA_PATH="/data"
 CMD /hyper_bed_caller/target/release/hyper_bed_caller
 VOLUME [ "/data" ]
