--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@
 #
 # API_ID=0
 # API_HASH=
+# COMMIT_SHA="$(git rev-parse HEAD)"
 
 # Run time env
 PHONE=
-
-# Omit this if you use docker
+# # Omit this if you use docker
 DATA_PATH=
